# ============================================================================
# Project info
# ============================================================================

[project]
name = "compas_fab"
description = "Robotic fabrication package for the COMPAS Framework that facilitates the planning and execution of robotic fabrication processes."
authors = [
    { name = "Romana Rust", email = "rust@arch.ethz.ch" },
    { name = "Gonzalo Casas", email = "casas@arch.ethz.ch" },
    { name = "Stefana Parascho", email = "parascho@arch.ethz.ch" },
    { name = "David Jenny", email = "jenny@arch.ethz.ch" },
    { name = "Kathrin Dörfler", email = "doerfler@arch.ethz.ch" },
    { name = "Matthias Helmreich", email = "helmreich@arch.ethz.ch" },
    { name = "Augusto Gandia", email = "gandia@arch.ethz.ch" },
    { name = "Zhao Ma", email = "ma@arch.ethz.ch" },
    { name = "Inés Ariza", email = "ariza@arch.ethz.ch" },
    { name = "Matteo Pacher", email = "pacher@arch.ethz.ch" },
    { name = "Beverly Lytle", email = "lytle@arch.ethz.ch" },
    { name = "Yijiang Huang", email = "yijiangh@mit.edu" },
    { name = "Chen Kasirer", email = "kasirer@arch.ethz.ch" },
    { name = "Edvard Bruun", email = "ebruun@princeton.edu" },
    { name = "Victor Pok", email = "leung@arch.ethz.ch" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies", "version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://compas.dev/compas_fab/latest"
Repository = "https://github.com/compas-dev/compas_fab"

# ============================================================================
# Setup and build
# ============================================================================

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "compas_fab.__version__" }
dependencies = { file = "requirements.txt" }
optional-dependencies = { dev = { file = "requirements-dev.txt" } }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

# ============================================================================

[tool.black]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["src", "tests"]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py"
]
addopts = "-ra --strict --doctest-glob=*.rst --tb=short"
doctest_optionflags= "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES"
filterwarnings = "ignore::DeprecationWarning"

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D100"]

[tool.isort]
force_single_line = true
line_length = 120
known_first_party = "compas_fab"
default_section = "THIRDPARTY"
forced_separate = "test_compas_fab"
skip = ["__init__.py"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001"]
"tests/*" = ["I001"]
"tasks.py" = ["I001"]
"src/compas_fab/ghpython/components/*/code.py" = ["F821", "F401"]
"src/compas_fab/ghpython/components_cpython/*/code.py" = ["F821", "F401"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = [
    "compas_fab"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-line-length = 179

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
